# readme-motion-gallery

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ko.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: CanvasPreview.test.tsx  CanvasPreview.tsx  ImageUploader.tsx  PreviewPanel.tsx  SettingsPanel.tsx  controls.tsx
apps/web/src/preview/: canvasRenderer.test.ts  canvasRenderer.ts  layout.test.ts  layout.ts  performance.test.ts  timeline.test.ts  timeline.ts  usePreviewPlayback.ts  usePreviewSources.test.ts  usePreviewSources.ts
apps/web/src/state/: EditorContext.tsx  editorState.test.ts  editorState.ts  localImages.test.ts  localImages.ts  validation.ts
apps/web/src/test/: setup.ts
docs/: web-editor-contract-v1.md
examples/basic/: create_demo_images.py  gallery.yml
schema/: gallery-config-v1.schema.json  preview-parity-v1.json
src/readme_motion_gallery/: __init__.py  cli.py  config.py  errors.py  layouts.py  renderer.py
tests/: __init__.py  helpers.py  test_cli.py  test_config.py  test_layouts.py  test_readme_localization.py  test_renderer.py  test_web_editor_contract.py
